--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Basic Form</string>
-    <string name="what_is_your_nickname">Digite seu nome</string>
+    <string name="what_is_your_nickname">Nome</string>
     <string name="what_is_your_age">Idade</string>
     <string name="what_is_your_phone">Telefone</string>
     <string name="what_is_your_rg">RG</string>
